--- a/public/style.css
+++ b/public/style.css
@@ -127,6 +127,7 @@ tr {
 .media-text {
   margin: 0 5%;
   text-align: justify;
+  width: 90%;
 }
 .media-img {
   width: 90%;
@@ -360,6 +361,9 @@ tr {
   .copyright {
     font-size: 0.77rem;
   }
+  .blade img {
+    width: 100%;
+  }
 }
 /*****************************************************LAPTOP ***********************************/
 @media only screen and (min-width: 1024px) {
@@ -393,8 +397,10 @@ tr {
     margin-top: 1%;
     display: flex;
   }
+  .media-item {
+    display: flex;
+  }
   .media-text {
-    width: 100%;
     font-size: 1rem;
     margin-top: 2%;
   }
@@ -413,7 +419,6 @@ tr {
     margin-bottom: 2%;
   }
   .content-container {
-    margin: 6% 0 0;
   }
   .index {
     height: 100%;
@@ -428,13 +433,14 @@ tr {
   .media-content {
     margin-top: 1%;
   }
+
   .media-text {
-    width: 35%;
     font-size: 1rem;
     margin-top: 2%;
   }
+
   .media-img {
-    width: 40%;
+    /* width: 40%; */
   }
 }
 
@@ -443,6 +449,7 @@ tr {
     font-size: 3rem;
     margin-bottom: 2%;
   }
+
   .content-container {
     margin: 6% 0 0;
   }
@@ -480,5 +487,8 @@ tr {
   }
   .index {
     height: 100%;
+  }
+  .media-content {
+    display: flex;
   }
 }
