--- a/public/style.css
+++ b/public/style.css
@@ -385,6 +385,7 @@ tr {
 
   .ex-imgs img {
     max-width: 38%;
+    margin-bottom: 3%;
   }
   li {
     line-height: 1.7;
@@ -490,5 +491,10 @@ tr {
   }
   .media-content {
     display: flex;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .media-text {
+    font-size: 1.5rem;
   }
 }
