--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,6 @@ p {
   font-weight: bold;
 }
 .index {
-  margin: 0 auto;
   width: 100%;
   position: absolute;
   overflow: hidden;
@@ -28,12 +27,7 @@ p {
   position: fixed;
 }
 hr {
-  border: none;
   border-top: 3px double #333;
-  color: #333;
-  overflow: visible;
-  text-align: center;
-  height: 5px;
 }
 
 a:hover {
@@ -48,33 +42,19 @@ a:hover {
   text-align: justify;
 }
 
-.pages-text li {
-  padding-top: 0.5%;
-  font-size: 0.9rem;
-}
-
 .avatar {
   display: block;
-  margin-top: 9%;
 }
-.media-content {
-  margin-top: 1%;
-}
-.media-text {
-  width: 100%;
-  font-size: 1rem;
-  margin-top: 2%;
-}
-.media-img {
+
+.ex-imgs img {
+  margin-bottom: 3%;
 }
 /**********************************Footer*******/
 
 footer {
-  display: block;
+  /* display: block; */
   background-color: #6998ab;
-  color: black;
   text-align: center;
-  position: relative;
   width: 105%;
 }
 .footer-index {
@@ -89,10 +69,12 @@ footer {
 }
 .tamir {
   color: bisque;
+  text-decoration: underline;
 }
 .logo {
   color: white;
 }
+
 .logo:hover {
   color: maroon;
 }
@@ -101,40 +83,23 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-}
-.ex-table {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.2;
 }
 
-.ex-content table {
-  width: 100%;
-}
 .ex-table td,
 tr {
   vertical-align: baseline;
-  line-height: 1.2;
-  font-size: 0.9rem;
 }
 
-.space {
-  visibility: hidden;
-}
 .awards {
-  margin-top: 12%;
   width: 180%;
-  font-size: 1.1rem;
+  justify-content: center;
 }
 .media-text {
   margin: 0 5%;
   text-align: justify;
   width: 88%;
 }
-.media-img {
-  width: 95%;
-}
+
 /*****************************************************MOBILE ***********************************/
 
 @media only screen and (max-width: 440px) {
@@ -143,14 +108,13 @@ tr {
   }
 
   .index-img {
-    position: fixed;
     height: 1459px;
   }
 
   .img-block img {
     width: 96%;
     display: block;
-    margin: 23% auto 0;
+    margin: 22% auto 0;
   }
   .long-pic {
     max-width: 90%;
@@ -170,14 +134,7 @@ tr {
 
   .ex-imgs {
     display: flex;
-    justify-content: space-evenly;
     flex-direction: column;
-  }
-
-  .ex-imgs img {
-    max-width: 100%;
-    padding-top: 4%;
-    margin: 0 auto auto;
   }
 
   .contact-text {
@@ -202,44 +159,29 @@ tr {
 
 @media only screen and (min-width: 440px) {
   h1 {
-    font-size: 2rem;
-  }
-  .index {
-    height: 100%;
+    padding-top: 2%;
   }
 
   .content-container {
-    margin-top: 13%;
+    margin-top: 10%;
   }
 
   .img-block img {
     max-width: 70%;
     display: block;
     margin: 4% auto;
-    position: relative;
   }
 
   .about-img {
-    display: block;
     margin-bottom: 50%;
     padding-left: 15%;
   }
 
   span {
     display: block;
-    margin-bottom: 19%;
   }
   /**********************************PAGES*******/
 
-  .pages-text {
-    text-align: justify;
-    margin: auto;
-  }
-
-  .pages-text li {
-    padding-top: 0.5%;
-    font-size: 1rem;
-  }
   .ex-imgs {
     display: flex;
     justify-content: space-evenly;
@@ -250,8 +192,6 @@ tr {
   }
   .ex-table td,
   tr {
-    vertical-align: baseline;
-    line-height: 1.3;
     font-size: 1rem;
   }
   .avatar {
@@ -261,15 +201,6 @@ tr {
   .contact-text {
     font-size: 1.3rem;
     margin-left: 7%;
-  }
-  .media-content {
-    margin-top: 1%;
-    margin: 0 auto;
-  }
-  .media-text {
-    width: 87%;
-    font-size: 1rem;
-    margin-top: 1%;
   }
 
   /**********************************Footer*******/
@@ -286,8 +217,7 @@ tr {
 
 @media only screen and (min-width: 768px) {
   h1 {
-    padding-top: 3%;
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   /**********************************PAGES*******/
@@ -299,21 +229,11 @@ tr {
   }
   .img-block:last-child {
     margin: 5% auto 17%;
-    display: flex;
-    align-items: end;
-    justify-content: space-evenly;
   }
 
-  .img-block span {
-    width: 20%;
-  }
   .img-block img {
     width: 59%;
     margin: 0;
-  }
-
-  .content-container {
-    margin: 10% 0 0;
   }
 
   .about-img {
@@ -321,180 +241,64 @@ tr {
     font-family: "roboto";
     font-weight: 600;
     margin: 0;
+    width: 20%;
     padding-left: 0;
   }
 
   .pages-text {
     width: 72%;
     text-align: justify;
-    margin: auto;
-  }
-  .ex-imgs {
-    display: flex;
-    justify-content: space-evenly;
   }
 
-  .ex-imgs img {
-    width: 45%;
-  }
   .avatar {
     margin: 3% 0 6%;
     width: 35%;
   }
   .media-content {
-    margin-top: 1%;
     display: flex;
   }
-  .media-text {
-    font-size: 1rem;
-    margin-top: 2%;
-  }
+
   .media-img {
-    padding-top: 6%;
+    padding-top: 4%;
     width: 35%;
-    height: 20%;
-  }
-
-  /**********************************FOOTER*******/
-
-  .logo {
-    font-size: 2em;
-    margin: auto 0.3%;
-  }
-  .copyright {
-    font-size: 0.77rem;
+    height: 30%;
   }
   .blade img {
-    width: 100%;
+    width: 80%;
+    margin-bottom: 1%;
   }
 }
 /*****************************************************LAPTOP ***********************************/
 @media only screen and (min-width: 1024px) {
-  h1 {
-    padding-top: 1%;
-    font-size: 3rem;
-  }
-  .content-container {
-    margin: 6% 0 0;
-  }
-
   .img-block img {
     width: 44%;
   }
 
-  ul {
-    line-height: 2.2;
-  }
-
-  .ex-imgs img {
-    max-width: 38%;
-    margin-bottom: 3%;
-  }
-  li {
-    line-height: 1.7;
-  }
-  .avatar {
-    margin-top: 3%;
-    width: 30%;
-  }
-  .media-content {
-    margin-top: 1%;
-    display: flex;
-  }
   .media-item {
     display: flex;
-  }
-
-  .media-text {
-    font-size: 1rem;
-    margin-top: 2%;
-  }
-
-  .media-img {
-    padding: 0;
-    width: 40%;
-    height: 40%;
   }
 }
 
 /*****************************************************LAPTOP L***********************************/
-@media only screen and (min-width: 1300px) {
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 2%;
-  }
-  .content-container {
-  }
-  .index {
-    height: 100%;
-  }
-  .img-block {
-    justify-content: space-around;
-    margin-bottom: 17%;
-  }
-  .ex-imgs img {
-    max-width: 30%;
-  }
-  .media-content {
-    margin-top: 1%;
-  }
-
-  .media-text {
-    font-size: 1rem;
-    margin-top: 2%;
-  }
-
-  .media-img {
-    /* width: 40%; */
-  }
-}
 
 @media only screen and (min-width: 1400px) {
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 2%;
-  }
-
-  .content-container {
-    margin: 6% 0 0;
-  }
-  .img-block {
-    margin: 3% auto 37%;
-  }
   .img-block img {
     max-width: 33%;
   }
   nav {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
   }
   .pages-text {
-    font-size: 1.4rem;
-  }
-  .container a {
-    margin-bottom: 0;
-  }
-  .logo {
-    font-size: 2rem;
+    font-size: 1.2rem;
   }
 
-  .img-block {
-    justify-content: space-evenly;
-    margin-bottom: 21%;
-  }
-  .avatar {
-    width: 20%;
-  }
   .ex-table td,
   tr {
-    vertical-align: baseline;
     line-height: 1.2;
     font-size: 1.2rem;
   }
-  .index {
-    height: 100%;
-  }
-  .media-content {
-    display: flex;
+  .content-container {
+    margin-top: 6%;
   }
 }
 @media only screen and (min-width: 1600px) {
