--- a/public/style.css
+++ b/public/style.css
@@ -146,9 +146,10 @@ footer {
   .ex-imgs {
     display: flex;
     flex-direction: column;
-    width: 80%;
   }
-
+  .ex-imgs img {
+    width: 100%;
+  }
   .contact-text {
     font-size: 1.3rem;
     margin-left: 7%;
@@ -159,6 +160,7 @@ footer {
   }
   .avatar {
     width: 100%;
+    margin-top: %;
   }
 
   /**********************************Footer*******/
