--- a/public/style.css
+++ b/public/style.css
@@ -37,10 +37,11 @@ a:hover {
 }
 
 #index-header {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Raleway", sans-serif;
   letter-spacing: 1rem;
   position: fixed;
-  color: white;
+  color: rgb(255, 255, 255);
+  text-shadow: powderblue 3px;
   font-size: 4rem;
   text-align: center;
   margin: 8% 0 0 6%;
@@ -77,7 +78,7 @@ tr {
 .media-text {
   margin: 0 5%;
   text-align: justify;
-  width: 88%;
+  width: 90%;
 }
 /**********************************Footer*******/
 
@@ -160,7 +161,7 @@ footer {
   }
   .avatar {
     width: 100%;
-    margin-top: %;
+    margin-top: 6%;
   }
 
   /**********************************Footer*******/
