--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,13 @@ h1 {
 }
 
 h2 {
-  font-family: "roboto";
+  font-family: "Roboto";
   font-weight: 800;
+}
+
+h5 {
+  font-size: "Roboto";
+  font-weight: 400;
 }
 ul {
   padding-left: 25px;
