--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ h1 {
 h2 {
   font-family: "Roboto";
   font-weight: 800;
+  margin-bottom: 0;
 }
 
 h5 {
@@ -183,7 +184,10 @@ footer {
 
 @media only screen and (min-width: 440px) {
   h1 {
-    padding-top: 8%;
+    padding-top: 6%;
+  }
+  h2 {
+    margin-top: 16%;
   }
   span {
     display: block;
@@ -248,6 +252,9 @@ footer {
   h1 {
     font-size: 2rem;
   }
+  h2 {
+    margin-top: 9%;
+  }
 
   /**********************************PAGES*******/
   .img-block {
@@ -299,7 +306,7 @@ footer {
 /*****************************************************LAPTOP ***********************************/
 @media only screen and (min-width: 1024px) {
   h1 {
-    padding-top: 2%;
+    padding-top: unset;
   }
   .img-block img {
     width: 44%;
