--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,7 @@ a:hover {
 }
 
 #index-header {
-  font-family: "Raleway", sans-serif;
+  font-family: "Playfair Display", serif;
   letter-spacing: 1rem;
   position: fixed;
   color: rgb(255, 255, 255);
